@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="1.3.4" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="1.3.5" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.requests" optional="true"/>
@@ -11,5 +11,9 @@
 		<platform>all</platform>
 		<license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
 		<source>https://github.com/Twilight0/script.module.tulip</source>
+		<news>[B]1.3.5[/B]
+- New convert function in youtube module
+- New strip accents function in cleantitle module
+- Cosmetics</news>
 	</extension>
 </addon>
