@@ -1,3 +1,8 @@
+[B]1.3.5[/B]
+- New convert function in youtube module
+- New strip accents function in cleantitle module
+- Cosmetics
+
 [B]1.3.4[/B]
 - Cosmetics
 
